--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "csc-317-2025",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Ecommerce app backend",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^5.1.0",
+    "mongoose": "^7.0.4",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
